@@ -5,6 +5,8 @@ refactoring module names to follow PEP 8.
 
 Checking modules directly under the vitables package with pylint.
 
+The package docbrowser has been analyzed with pylint.
+
 ** September 25, 2013 **
 Refactoring module names to follow PEP 8.
 nodeInfo.py -> nodeinfo.py
